# LiquidProofs

./: README.md  State_Design_2.lagda.md  lh-plugin-demo.cabal  stack.yaml  stack3.yaml
Dex Agda/: #OpSem_DEX.agda#  .#OpSem_DEX.agda  DEX.agda  DEX.agdai  DEX2.agda  DEX2.agdai  LiterateDEX.agdai  LiterateDEX.lagda.md  OpSem_DEX.agda  OpSem_DEX.agdai  TrRel_DEX.agda  TrRel_DEX.agdai
Dex Agda/2hs/: #AccountSim.agda#  #AccountSimProofs.agda#  #DEx.agda#  #DExpandedProofs.agda#  #MultiSig.agda#  .#DExProofs2.agda  AccountSim.agda  AccountSim.hs  AccountSimDistrib.agda  AccountSimDistribProofs.agda  AccountSimProofs.agda  AccountSimProofs2.agda  AccountSimProofsBak.agda  DEx.agda  DEx.hs  DEx2.agda  DExOriginal.agda  DExProofs.agda  DExProofs2.agda  DExProofs3.agda  DExProofs4.agda  DExProofsClassifier.agda  DExProofsPredicate.agda  DExpanded.agda  DExpanded2.agda  DExpandedProofs.agda  DExpandedProofs2.agda  DoubleSatisfaction.agda  DoubleSatisfactionProofs.agda  DoubleSatisfactionProofs2.agda  DoubleSpend.agda  Example.agda  Example1.3.agda  ExampleTemplate.agda  ExampleTemplate.hs  ListInsertLib.agda  ListInsertLibDec.agda  ListLemma.agda  ListLemmaLib.agda  MWE'.agda  (+29 more)
Dex Agda/OldCode/: #DEX.lagda.md#  DEX.agdai  DEX.lagda.md  DEX2.agdai  DEX2.lagda.md  DEXX.agdai  DEXX.lagda.md  ValueFunction.agda
Dex Agda/final/: Lib.agda  Lib.hs  ProofLib.agda  ScriptContext.agda  Value.agda  ValueFunction.agda  ValueOld.agda  example-basics.agda-lib
Dex Agda/lib-hidden/: example-basics.agda-lib
Dex Agda/lib-ver/: AccountSim.agda  AccountSimProofs.agda  DEx.agda  DExProofs.agda  (+4 more)
(+111 files in other folders)
